# REAL-LIFE-AI-PROJECTS

./: README.md
AI Agent for Task Managment/: .env.example  README.md  main.py
AI Cost Saving Agent/: README.md  cost_saving_agent.py
AI Finance Agent/: AI Finance Agent Llama 3.ipynb
AI Financial Analysis/: Financial Report LlamaParse Auto.ipynb  LlamaParse Premium Financial Analysis.ipynb  Multimodal Claude3.5 Sonnet GPT4.o Opus Charts Analysis.ipynb  Multimodal Claude3.5 Sonnet GPT4.o Opus Charts Analysis.md
AI Query SQL Agent/: README.md  rss_feed.db  run.py  sql-data.py  sql_agents.py
AI Stock Analysis Assistant/: README.md
AI Stock Analysis Assistant/backend/: README.md  main.py  pyproject.toml
Agentic AI System/: .env.example  .gitignore  README.md  agents_config.json  main.py  requirements.txt  validate_system.py
Agents Financial News/: main.ipynb
AutoGen Financial AI Agents/: AutoGen FinAI Agents.ipynb  README.md
Deepseek Document AI/: README.md  document_rag_deep.py
Doc-MCP Advanced Documentation RAG System/: README.md  app.py
Documentation Q&A Agent/: README.md  main.py
End to End Master RAG Tutorial/: .env  1-Understanding RAG.ipynb  10-RAG with Knowledge Graph.ipynb  2-Advanced Query Transformations.ipynb  3-Routing DataSources in RAG.ipynb  4-Indexing for VectorDatabases.ipynb  5-Retrieval Architecture for RAG.ipynb  6-Reflective Practices in RAG.ipynb  7-RAG Agent Adaptation.ipynb  8-Healthcare Agent System.ipynb  9-LLAMA 3 RAG Local Agent.ipynb
Finance Advisor AI Agent/: README.md  chatbot.py  data_processing.py  main.py  requirements.txt
Financial Agents Advisor System/: .env.example  .gitignore  README.md  (+5 more)
(+170 files in other folders)
